--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,15 @@
         </ul>
     </div>
 
+    <div class="delete-section">
+        <div class="modal-content">
+            <p>Delete this task?</p>
+            <button class="confirm">Yes</button>
+            <button class="cancel">No</button>
+        </div>
+    </div>
+    
+
 
     <script src="../src/options.js"></script>
 </body>
