change class names for delete section

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="delete-section background">
-        <div class="modal-content">
+        <div class="delete-window">
             <p>Delete this task?</p>
-            <button class="confirm">Yes</button>
-            <button class="cancel">No</button>
+            <button class="yes">Yes</button>
+            <button class="no">No</button>
         </div>
     </div>
 
@@ -50,11 +50,13 @@
 
     <div class="edit-section background">
         <div class="edit">
-            <input type="text" class="edit-element" id="title"></input>
-            <input type="text" class="edit-element" id="description"></input>
+            <div class="edit-elements">
+                <input type="text" class="edit-element" id="title"></input>
+                <input type="text" class="edit-element" id="description"></input>
+            </div>
             <div class="buttons">
                 <button class="cancel">Cancel</button>
-                <button class="confirm">Save</button>
+                <button class="save">Save</button>
             </div>
         </div>
     </div>
