remove img src from button

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To Do List</title>
-    <link href="../src/styles/general.css" rel="stylesheet" />
+    <link href="../src/styles/sections.css" rel="stylesheet" />
+    <link href="../src/styles/common.css" rel="stylesheet" />
 </head>
 
 
-
-<!-- Для айдишника таска можно использовать Date.now - будет записывать секунды.-->
 <body>
    <div class="main-section">
         <div class="base-form">
@@ -17,18 +17,14 @@
                 <input type="text" class="input-element" id="description" placeholder="About..."></input>
             </div>
     
-            <button class="add-button">
-                <img src="../src/images/add-button.svg" class="add">
-            </button>
+            <button class="add-button"></button>
         </div>
 
         <div class="no-tasks">
             <p>No Tasks</p>
         </div>
 
-        <ul class="tasks-list">
-
-        </ul>
+        <ul class="tasks-list"></ul>
     </div>
 
     <div class="delete-section background">
@@ -39,20 +35,21 @@
         </div>
     </div>
 
-    <div class="menu-section background">
+    <div class="share-section background">
         <ul class="menu">
             <li><img src="../src/images/sharing-images/copy.svg"></li>
             <li><img src="../src/images/sharing-images/telegram.svg"></li>
             <li><img src="../src/images/sharing-images/vk.svg"></li>
             <li><img src="../src/images/sharing-images/whatsapp.svg"></li>
+            <li><img src="../src/images/sharing-images/facebook.svg"></li>
         </ul>
     </div>
 
     <div class="edit-section background">
         <div class="edit">
             <div class="edit-elements">
-                <input type="text" class="edit-element" id="title"></input>
-                <input type="text" class="edit-element" id="description"></input>
+                <input type="text" class="title-element"></input>
+                <input type="textarea" class="description-element"></input>
             </div>
             <div class="buttons">
                 <button class="cancel">Cancel</button>
@@ -60,8 +57,7 @@
             </div>
         </div>
     </div>
-    
 
-
-    <script src="../src/options.js"></script>
+    <script src="../src/scripts/base.js"></script>
+    <script src="../src/scripts/options.js"></script>
 </body>
