fix input bug for edit section

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
    <div class="main-section">
         <div class="base-form">
             <div class="input-section">
-                <input type="text" class="input-element" id="title" placeholder="Title..."></input>
-                <input type="text" class="input-element" id="description" placeholder="About..."></input>
+                <input type="text" class="title input-element" placeholder="Title..."></input>
+                <input type="text" class="description input-element" placeholder="About..."></input>
             </div>
     
             <button class="add-button"></button>
@@ -48,8 +48,8 @@
     <div class="edit-section background">
         <div class="edit">
             <div class="edit-elements">
-                <input type="text" class="title-element"></input>
-                <input type="textarea" class="description-element"></input>
+                <input type="text" class="title-element edit-element"></input>
+                <textarea type="textarea" class="description-element edit-element"></textarea>
             </div>
             <div class="buttons">
                 <button class="cancel">Cancel</button>
