add pages folder

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To Do List</title>
-    <link href="../src/styles/sections.css" rel="stylesheet" />
-    <link href="../src/styles/common.css" rel="stylesheet" />
+    <link href="../../src/styles/sections.css" rel="stylesheet" />
+    <link href="../../src/styles/common.css" rel="stylesheet" />
 </head>
 
 
@@ -37,11 +37,11 @@
 
     <div class="share-section background">
         <ul class="menu">
-            <li><img src="../src/images/sharing-images/copy.svg"></li>
-            <li><img src="../src/images/sharing-images/telegram.svg"></li>
-            <li><img src="../src/images/sharing-images/vk.svg"></li>
-            <li><img src="../src/images/sharing-images/whatsapp.svg"></li>
-            <li><img src="../src/images/sharing-images/facebook.svg"></li>
+            <li><img src="../../src/assets/images/sharing-images/copy.svg"></li>
+            <li><img src="../../src/assets/images/sharing-images/telegram.svg"></li>
+            <li><img src="../../src/assets/images/sharing-images/vk.svg"></li>
+            <li><img src="../../src/assets/images/sharing-images/whatsapp.svg"></li>
+            <li><img src="../../src/assets/images/sharing-images/facebook.svg"></li>
         </ul>
     </div>
 
@@ -58,6 +58,6 @@
         </div>
     </div>
 
-    <script src="../src/scripts/base.js"></script>
-    <script src="../src/scripts/options.js"></script>
+    <script src="../../src/scripts/base.js"></script>
+    <script src="../../src/scripts/options.js"></script>
 </body>
