fix styles path

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To Do List</title>
-    <link href="../../src/styles/sections.css" rel="stylesheet" />
-    <link href="../../src/styles/common.css" rel="stylesheet" />
+    <link href="../styles/sections.css" rel="stylesheet" />
+    <link href="../styles/common.css" rel="stylesheet" />
 </head>
 
 
@@ -58,6 +58,6 @@
         </div>
     </div>
 
-    <script src="../../src/scripts/base.js"></script>
-    <script src="../../src/scripts/options.js"></script>
+    <script src="../scripts/base.js"></script>
+    <script src="../scripts/options.js"></script>
 </body>
