--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,7 +37,7 @@
 
     <div class="share-section background">
         <ul class="menu">
-            <li><img src="../../src/assets/images/sharing-images/copy.svg"></li>
+            <li class="copy"><img src="../../src/assets/images/sharing-images/copy.svg"></li>
             <li><img src="../../src/assets/images/sharing-images/telegram.svg"></li>
             <li><img src="../../src/assets/images/sharing-images/vk.svg"></li>
             <li><img src="../../src/assets/images/sharing-images/whatsapp.svg"></li>
@@ -59,5 +59,7 @@
     </div>
 
     <script src="../scripts/base.js"></script>
-    <script src="../scripts/options.js"></script>
+    <script src="../scripts/deleteTask.js"></script>
+    <script src="../scripts/shareTask.js"></script>
+    <script src="../scripts/editTask.js"></script>
 </body>
