delete all sections except main

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,40 +25,12 @@
         </div>
 
         <ul class="tasks-list"></ul>
-    </div>
+    </div>  
 
-    <div class="delete-section background">
-        <div class="delete-window">
-            <p>Delete this task?</p>
-            <button class="yes">Yes</button>
-            <button class="no">No</button>
-        </div>
-    </div>
-
-    <div class="share-section background">
-        <ul class="menu">
-            <li class="copy"><img src="../../src/assets/images/sharing-images/copy.svg"></li>
-            <li><img src="../../src/assets/images/sharing-images/telegram.svg"></li>
-            <li><img src="../../src/assets/images/sharing-images/vk.svg"></li>
-            <li><img src="../../src/assets/images/sharing-images/whatsapp.svg"></li>
-            <li><img src="../../src/assets/images/sharing-images/facebook.svg"></li>
-        </ul>
-    </div>
-
-    <div class="edit-section background">
-        <div class="edit">
-            <div class="edit-elements">
-                <input type="text" class="title-element edit-element"></input>
-                <textarea type="textarea" class="description-element edit-element"></textarea>
-            </div>
-            <div class="buttons">
-                <button class="cancel">Cancel</button>
-                <button class="save">Save</button>
-            </div>
-        </div>
-    </div>
-
-    <script src="../scripts/base.js"></script>
+    <script src="../scripts/createTaskItem.js"></script>
+    <script src="../scripts/addTask.js"></script>
+    <script src="../scripts/createTaskMenu.js"></script>
+    <script src="../scripts/localStorage.js"></script>
     <script src="../scripts/deleteTask.js"></script>
     <script src="../scripts/shareTask.js"></script>
     <script src="../scripts/editTask.js"></script>
