--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To Do List</title>
-    <link href="../styles/sections.css" rel="stylesheet" />
-    <link href="../styles/common.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>To Do List</title>
+
+  <link href="../styles/sections.css" rel="stylesheet" />
+  <link href="../styles/common.css" rel="stylesheet" />
 </head>
 
-
 <body>
-   <div class="main-section">
-        <div class="base-form">
-            <div class="input-section">
-                <input type="text" class="title input-element" placeholder="Title..."></input>
-                <input type="text" class="description input-element" placeholder="About..."></input>
-            </div>
-    
-            <button class="add-button"></button>
-        </div>
-
-        <div class="no-tasks">
-            <p>No Tasks</p>
-        </div>
-
-        <ul class="tasks-list"></ul>
-    </div>  
-
-    <script src="../scripts/createTaskItem.js"></script>
-    <script src="../scripts/addTask.js"></script>
-    <script src="../scripts/createTaskMenu.js"></script>
-    <script src="../scripts/localStorage.js"></script>
-    <script src="../scripts/deleteTask.js"></script>
-    <script src="../scripts/shareTask.js"></script>
-    <script src="../scripts/editTask.js"></script>
+  <script src="../scripts/createMainSection.js"></script>
+  <script src="../scripts/addTask.js"></script>
+  <script src="../scripts/createTaskItem.js"></script>
+  <script src="../scripts/deleteTask.js"></script>
+  <script src="../scripts/createTaskMenu.js"></script>
+  <script src="../scripts/shareTask.js"></script>
+  <script src="../scripts/editTask.js"></script>
+  <script src="../scripts/localStorage.js"></script>
 </body>
